Fixed alignment problem with right panel on result page; Removed redundant container which was reducing screen size on large display, re-worked homepage tiles accordingly

--- a/app/assets/stylesheets/uoh-bl/_document.css.scss
+++ b/app/assets/stylesheets/uoh-bl/_document.css.scss
@@ -127,3 +127,5 @@
   dt { font-size: 16px; padding-bottom: 0; }
   dd { font-size: 96%;}
 }
+
+.item-panel-right hr { width: 124px;}
